--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -23,7 +23,7 @@
       <td>{{client.firstName}} {{client.lastName}}</td>
       <td>{{client.email}}</td>
       <td>{{client.balance | currency:"USD":true}}</td>
-      <td><a [routerLink]="['/client/'+ client.$key]" class="btn btn-secondary btn-sm"><i class="fa fa-arrow-circle-o-right"></i> Details</a></td>
+      <td><a [routerLink]="['/client/'+ client.$key]" class="btn btn-secondary btn-sm"><i class="fa fa-info-circle"></i> Details</a></td>
     </tr>
   </tbody>
 </table>
