--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,3 +1,29 @@
-<p>
-  settings works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <a routerLink="/" class="btn btn-link"><i class="fa fa-arrow-circle-o-left"></i> Back to Dashboard</a>
+  </div>
+  <div class="col-md-6"></div>
+</div>
+
+<div class="card">
+  <h3 class="card-header">
+    Edit Settings
+  </h3>
+  <div class="card-block">
+    <form (submit)="onSubmit()">
+      <div class="form-group">
+        <label for="allorRegistration">Allow Registration</label>
+        <input type="checkbox" [checked]="settings.allorRegistration" (change)="settings.allorRegistration = !settings.allorRegistration" name="allorRegistration">
+      </div>
+      <div class="form-group">
+        <label for="disableBalanceOnAdd">Disable Balance on Add</label>
+        <input type="checkbox" [checked]="settings.disableBalanceOnAdd" (change)="settings.disableBalanceOnAdd = !settings.disableBalanceOnAdd" name="disableBalanceOnAdd">
+      </div>
+      <div class="form-group">
+        <label for="disableBalanceOnEdit">Disable Balance on Edit</label>
+        <input type="checkbox" [checked]="settings.disableBalanceOnEdit" (change)="settings.disableBalanceOnEdit = !settings.disableBalanceOnEdit" name="disableBalanceOnEdit">
+      </div>
+      <input type="subtmi" class="btn btn-primary btn-block" value="Submit">
+    </form>
+  </div>
+</div>
