--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -23,7 +23,7 @@
         <label for="disableBalanceOnEdit">Disable Balance on Edit</label>
         <input type="checkbox" [checked]="settings.disableBalanceOnEdit" (change)="settings.disableBalanceOnEdit = !settings.disableBalanceOnEdit" name="disableBalanceOnEdit">
       </div>
-      <input type="subtmi" class="btn btn-primary btn-block" value="Submit">
+      <input type="submit" class="btn btn-primary btn-block" value="Submit">
     </form>
   </div>
 </div>
